# Cryptonique

./: Cargo.toml  README.md  build.rs  ca.pem  notes  prompt  server.pem  test_results.txt
docs/: business.md  deutch_algo.md  direction.md  doc.md  integration.md  quantum_encryption.md  quantum_encryption_results.md  quantum_encryption_run.md  quantum_temporal_keys.md  quantun_encryption.md  rendomness.md  temporal_keys.md  tests.md  unit_citcle_state_machine.md
src/: complex_key.rs  deutchs_algorithm.rs  lib.rs  main.rs  sdr.rs  shared_state.rs  unit_circle_state_machine.rs
src/decryption/: decrypt.rs  learning.rs  mod.rs
src/demo/: combined_crypto_demo.rs  htm_crypto_demo.rs  mod.rs  temporal_key_demo.rs
src/encoding/: binary_conversion.rs  binary_encoder.rs  mod.rs
src/encryption/: encrypt.rs  fft_initialize.rs  frequency_analysis.rs  hashing.rs  key_generation.rs  mod.rs  operations.rs
src/encryption/asymmetric_encryption/: decrypt_asym.rs  encrypt_asym.rs  keygen.rs  mod.rs
src/encryption/confusion_diffusion/: confusion.rs  feistel_network.rs  mod.rs
src/encryption/error_correction/: error_connection_codes.rs  error_correction.rs  mod.rs
src/encryption/noise/: cellular_automata.rs  chaotic_maps.rs  mod.rs
src/encryption/nonlinear_transforms/: data_masking.rs  lookup_tables.rs  non_linear_transforms.rs
src/htm/: anomaly_check.rs  cells.rs  htm_model.rs  htm_system.rs  key_evolution.rs  key_properties.rs  learning.rs  mod.rs  noise_generation.rs  temporal_keys.rs  tests
src/htm/columns/: column.rs
src/htm/dendrites/: dendrite.rs  mod.rs
src/htm/encoders/: mod.rs  scalar_encoder.rs
src/htm/layers/: input_layer.rs  mod.rs  output_layer.rs
src/htm/spatial_pooling/: adapt_and_learn.rs  inhibit.rs  mod.rs
src/htm/synapses/: synapse.rs
src/quantum/: mod.rs  phase_kickback.rs  quantum_oracle.rs
src/quantum_algorithms/: mod.rs  quantum_resistant_algos.rs
src/quantum_algorithms/kems/: bike.rs  classic_mceliece.rs  frodokem.rs  hqc.rs  kyber.rs  mod.rs  ntruprime.rs
src/quantum_communication/: client.rs  mod.rs
src/spatial_pooling/: inhibit.rs  learn.rs  mod.rs  overlap.rs
src/transaction/: mod.rs  user_action.rs
src/utils/: cross_verify.rs  data_gen.rs  logger.rs  math_operations.rs  mod.rs  performance_metrics.rs
tests/: asymmetric_encryption_tests.rs  decryption_tests.rs  encoding_tests.rs  encryption_tests.rs  htm_tests.rs  quantum_temporal_keys_test.rs  spatial_pooling_tests.rs  temporal_keys_tests.md  temporal_keys_tests.rs  transaction_tests.rs
(+9 files in other folders)
