[package]
name = "cryptonique"
version = "0.1.0"
authors = ["Sylvain Cormier sylvaincormier@protonmail.com"]
edition = "2018"

[dependencies]
rand = "0.8"
itertools = "0.11.0"
rustfft = "6.0"
chrono = "0.4"
prettytable-rs = "0.10.0"
ring = "0.17.0"
colored = "2.0.0"

ndarray = "0.15"
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.1"
# reqwest = { version = "0.11.18", features = ["blocking", "json"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
num-complex = "0.4"

[dev-dependencies]





[features]

[lib]
name = "cryptonique"
path = "src/lib.rs"
