[package]
name = "cryptonique"
version = "0.1.0"
authors = ["Sylvain Cormier <sylvaincormier@protonmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8"
itertools = "0.12.0"
rustfft = "6.0"
chrono = "0.4"
prettytable-rs = "0.10.0"
ring = "0.17.0"
colored = "2.0.0"
ndarray = "0.15"
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
num-complex = "0.4"
log = "0.4"
env_logger = "0.10.1"
# reqwest = { version = "0.11.18", features = ["blocking", "json"] }
# gRPC dependencies
tonic = "0.10.2"
prost = "0.12.3"

tokio = { version = "1.0", features = ["full"] }

uuid = { version = "1.6.1", features = ["v4"] }

hex = "0.4" 

oqs = { version = "0.9.0", features = ["kems", "sigs"] }

[dev-dependencies]


[build-dependencies]
tonic-build = "0.10.2"

[[example]]
name = "htm_crypto_demo"
path = "src/demo/htm_crypto_demo.rs"

[[example]]
name = "combine_crypto_demo"
path = "src/demo/combined_crypto_demo.rs"

[[example]]
name = "temporal_key_demo"
path = "src/demo/temporal_key_demo.rs"

[features]

[lib]
name = "cryptonique"
path = "src/lib.rs"
